config/samples/flowc.io_v1alpha1_deployment.yaml
apiVersion: flowc.io/v1alpha1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: flowc
    app.kubernetes.io/managed-by: kustomize
  name: deployment-sample
spec:
  apiRef: api-sample
  gateway:
    name: gateway-sample
    listener: listener-sample
